# auctioned-p2p-backend

./: .gitignore  Cargo.toml  Makefile  README.md  purge-db.sh
consensus/: .env  README.md  hardhat.config.js  package.json
consensus/artifacts/@openzeppelin/contracts/token/ERC721/extensions/ERC721URIStorage.sol/: ERC721URIStorage.dbg.json
consensus/artifacts/@openzeppelin/contracts/utils/Counters.sol/: Counters.dbg.json
consensus/artifacts/@openzeppelin/contracts/utils/introspection/ERC165.sol/: ERC165.dbg.json
consensus/artifacts/contracts/auction/Auction.sol/: AuctionProtocol.json
consensus/artifacts/contracts/interfaces/IAuction.sol/: IAuction.json
consensus/artifacts/contracts/marketplace/Marketplace.sol/: Marketplace.json
consensus/artifacts/contracts/math/SafeMathU128.sol/: SafeMath.dbg.json  SafeMath.json
consensus/artifacts/contracts/nft/TestNFT.sol/: TestNFT.json
consensus/cache/: solidity-files-cache.json
consensus/contracts/: README.md
consensus/contracts/auction/: Auction.sol
consensus/contracts/interfaces/: IAuction.sol
consensus/contracts/marketplace/: Marketplace.sol
consensus/contracts/math/: SafeMathU128.sol
consensus/contracts/nft/: TestNFT.sol
consensus/contracts/wusd/: Wusd.sol
consensus/scripts/: deploy.js  prepareTestNetwork.js
consensus/test/: Auction.js  Marketplace.js  Network.js  _grpc-client.js  _helper.js  _network-helper.js  test-orders.json
frontend/: grpc-test.js  package.json  server.js
frontend/public/: manifest.json
frontend/src/: index.js
frontend/src/components/: App.js  Bid.js  Dapp.js  Marketplace.js  RegisterValidator.js
frontend/src/contracts/: AuctionProtocol.json  Marketplace.json  WrappedUSD.json
node/: Cargo.toml  README.md
node/src/: cli.rs  main.rs  utils.rs
services/db/: Cargo.toml
services/db/src/: lib.rs  rocks.rs  storage.rs
services/grpc/: Cargo.toml  README.md  build.rs
services/grpc/proto/: node_rpc.proto
services/grpc/src/: lib.rs
services/node/: Cargo.toml
services/node/src/: behaviour.rs  discovery.rs  lib.rs  node.rs  service.rs
services/service/: Cargo.toml  README.md
services/service/src/: behaviour.rs  lib.rs  service.rs
services/types/: Cargo.toml  build.rs
services/types/proto/: node_rpc.proto
services/types/src/: lib.rs  node.rs
services/web3/: Cargo.toml
services/web3/abi/: AuctionProtocol.json  Marketplace.json
services/web3/src/: lib.rs
