[package]
name = "grpc"
version = "0.0.1"
authors = ["Dastanbek Samatov <dastanbeksamatov@gmail.com>"]
edition = "2018"

[dependencies]
libp2p = { version = "0.39.1" }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] } 
futures = "0.3.17"
env_logger = "0.9.0"
log = "0.4.8"
prost = "0.9"
tonic = { version = "0.6.1", features = ["tls"] }
bytes = "1.0"

# internal deps
common-types = { path = "../types" }

[build-dependencies]
tonic-build = "0.6.0"
