[package]
name = "node"
version = "0.1.0"
authors = ["Dastanbek Samatov <dastanbeksamatov@gmail.com>"]
edition = "2018"

[dependencies]
libp2p = { version = "0.39.1" }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] } 
futures = "0.3.17"
env_logger = "0.9.0"
prost = "0.8"
# internal packages
