[package]
name = "p2p-service"
version = "0.1.0"
authors = ["Dastanbek Samatov <dastanbeksamatov@gmail.com>"]
edition = "2018"

[dependencies]
libp2p = { version = "0.39.1" }
async-std = { version = "1.10.0", features = ["attributes", "tokio1", "unstable"] } 
futures = "0.3.17"
env_logger = "0.9.0"
prost = "0.9"
log = "0.4.8"

# internal packages
db = { path = "../db" }
common-types = { path = "../types" }

