[package]
name = "common-types"
version = "0.1.0"
authors = ["Dastanbek Samatov <dastanbeksamatov@gmail.com>"]
edition = "2018"

[dependencies]
libp2p = { version = "0.39.1" }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] } 
futures = "0.3.17"
env_logger = "0.9.0"
prost = "0.9"
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.15.0"
tonic = { version = "0.6.1", features = ["tls"] }
thiserror = "1.0"
ethers = { version = "^0.6.0", features = ["ws"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.6.0"