[package]
name = "web3"
version = "0.0.1"
authors = ["Dastanbek Samatov <dastanbeksamatov@gmail.com>"]
edition = "2018"

[dependencies]
ethers = { version = "^0.6.0", features = ["ws", "eip712", "abigen"] }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] } 
futures = "0.3.17"
env_logger = "0.9.0"
log = "0.4.8"
bytes = "1.0"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }

# internal deps
common-types = { path = "../types" }

